<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/image_progress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/progress_loader"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TODO (2 points): Convert to ConstraintLayout -->
    <!-- TODO (1 point): Address Android Studio warnings -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_random_user"
            android:textAppearance="?textAppearanceHeadline4"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_selected_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_title"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/main_title">

            <ImageView
                android:id="@+id/main_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#33aaaaaa"
                android:contentDescription="@string/user_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/main_image"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/main_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_label"
                    android:textAppearance="?textAppearanceBody2"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/main_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textAppearance="?textAppearanceBody2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/main_name_label"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Jon" />


                <TextView
                    android:id="@+id/main_email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_label"
                    android:textAppearance="?textAppearanceBody2"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/main_name" />

                <TextView
                    android:id="@+id/main_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textAppearance="?textAppearanceBody2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/main_email_label"
                    app:layout_constraintTop_toBottomOf="@id/main_name"
                    tools:text="robert@test.com" />


                <Button
                    android:id="@+id/main_see_details_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_details"
                    app:layout_constraintTop_toBottomOf="@id/main_email" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/main_refresh_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_selected_card"
            android:text="@string/refresh_random_user"
            app:layout_constraintTop_toBottomOf="@id/main_selected_card" />

        <View
            android:id="@+id/main_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/main_refresh_button"
            android:layout_marginVertical="8dp"
            android:background="#11111111"
            app:layout_constraintTop_toBottomOf="@id/main_refresh_button" />

        <Button
            android:id="@+id/main_user_list_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_divider"
            android:text="@string/show_10_users"
            app:layout_constraintTop_toBottomOf="@id/main_divider" />

        <!-- TODO (5 points): Convert to RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_user_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/main_user_list_button"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_user_list_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
